# pet-language-dictionary-creator

./: .editorconfig  .gitignore  README.md  conf.yaml  pyproject.toml
src/: __init__.py  converter.py  serialize.py  settings.py  stats.py  translate.py
